# srcwrtimer

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-everything.yml  pr-comment-artifact-link.yml
.reuse/: dep5
closestpos/: Cargo.toml  build.rs
closestpos-rs/: Cargo.toml  build.rs
closestpos-rs/src/: lib.rs  natives_closestpos.cpp  natives_closestpos.rs  rust_exports_closestpos.h
closestpos/src/: lib.rs  nanoflann_shim.hpp  natives_replay.cpp
extshared/: Cargo.toml
extshared/src/: ICellArray.cpp  ICellArray.rs  IFileObject.cpp  IFileObject.hpp  IFileObject.rs  coreident.cpp  coreident.hpp  export_GetSMExtAPI.rs  export_sourcemod_extension_symbols.rs  extension.cpp  extension.h  lib.rs  rust_exports.h  smext_conf_boilerplate.rs  smsdk_config.h  sprintf.cpp  valvefs.cpp  valvefs.rs
extshared_build_helper/: Cargo.toml  cbindgen.toml
extshared_build_helper/src/: 0001-Fix-non-const-reference-cannot-bind-to-bit-field-err.patch  c++17-for-hl2sdk-css.patch  c++23-for-amtl.patch  c++23-for-hl2sdk-css-1.patch  lib.rs
smbz2/: Cargo.toml  build.rs
smbz2/src/: lib.rs  natives_bzip2.cpp  natives_bzip2.rs  rust_exports_bzip2.h  rust_exports_smbz2.h
srcwrf64/: Cargo.toml  build.rs
srcwrf64/src/: lib.rs  natives_f64.cpp  natives_f64.rs
srcwrhttp/: Cargo.toml  README.md  build.rs
srcwrhttp/src/: http_thread.rs  ip_addr.rs  lib.rs  natives_http.cpp  natives_http.rs  reqwest_text_with_charset.rs  rust_exports_http.h  server_ip.cpp  server_ip.rs
srcwrjson/: Cargo.toml  build.rs
srcwrjson/src/: ISRCWRJSONHello.hpp  lib.rs  natives_json.cpp  natives_json.rs  rust_exports_json.h
srcwrsample/: Cargo.toml  build.rs
srcwrsample/src/: lib.rs  natives_sample.cpp  natives_sample.rs  rust_exports_sample.h
srcwrsyncer/: Cargo.toml
srcwrsyncer/src/: gitstuff.rs  lib.rs  natives_syncer.cpp  rust_exports_syncer.h
srcwrtimer/addons/sourcemod/gamedata/: srcwr.gamedata.txt
srcwrtimer/addons/sourcemod/scripting/: srcwr-aaa-test.sp  srcwr-eventqueue.sp  srcwr-geoip-updater.sp  srcwr-getmap.sp  srcwr-json-explorer.sp  srcwr-mpbhops.sp  srcwr-sample.sp  srcwr-syncer.sp
srcwrtimer/addons/sourcemod/scripting/include/: bzip2.inc  closestpos.inc  connect.inc
srcwrtimer/addons/sourcemod/scripting/include/srcwr/: core.inc  eventqueue.inc  http.inc  json.inc  sample.inc  syncer.inc  util.inc
srcwrtimer/addons/sourcemod/translations/: srcwr.phrases.txt
srcwrutil/: Cargo.toml  build.rs
srcwrutil/src/: lib.rs  natives_util.cpp  natives_util.rs  nav-hardlinker.sh  rust_exports_srcwrutil.h  rust_exports_util.h  string_block.rs
