# https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace]
resolver = "2"

members = [
	"closestpos*",
	"extshared*",
	"smbz2",
	"srcwr*",
]
exclude = [
	# The SourceMod codez and folder structure...
	"srcwrtimer",

	# Crates that are not finished (or they're broken) so ignore them...
	"closestpos-rs", # broken
	"srcwrf64", # lol nothing implemented
	"srcwrreplayman", # very wip lol
	"srcwrsyncer", # not using right now
]

[workspace.package]
version = "1.0.0"
edition = "2024"
# TODO: Setup homepage url to go to each extension's folder / README?
homepage = "https://github.com/srcwr/srcwrtimer"
repository = "https://github.com/srcwr/srcwrtimer"

[workspace.dependencies]
extshared_build_helper = { path = "extshared_build_helper" }
extshared = { path = "extshared" }

[profile.release]
lto = true
incremental = false

[patch.crates-io]
#git2-curl = { path = "../git2-rs/git2-curl" }
#git2 = { path = "../git2-rs" }

