[package]
name = "smbz2"
authors = ["rtldg <rtldg@protonmail.com>"]
description = "smbz2 clone for SRCWR (it compresses and decompresses bzip2 files)"
license = "GPL-3.0-or-later"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
extshared_build_helper.workspace = true

[dependencies]
extshared.workspace = true
bzip2 = { version = "0.6" }
