[package]
name = "srcwrhttp"
authors = ["rtldg <rtldg@protonmail.com>"]
description = "HTTP extension for SRCWR"
license = "GPL-3.0-or-later"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
extshared_build_helper.workspace = true

[dependencies]
extshared.workspace = true
mimalloc = { version = "*", default-features = false } #{ version = "0.1.37", features = [] } # TODO: "override"...

serde_json = { version = "1", features = ["std", "float_roundtrip"] }

bytes = "1"
tokio-tungstenite = "0.28" # websocket library
tokio = { version = "1", features = ["full"] }
futures = "0.3"
crossbeam = { version = "0.8", features = ["std", "alloc"] }
http = "1"

anyhow = "1"
#thiserror = "1"

# used in reqwest_text_with_charset
encoding_rs = "0.8"
mime = "0.3"


[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "http2", "charset", "system-proxy", "gzip", "brotli", "deflate", "multipart", "cookies", "stream", "native-tls"] }

[target.'cfg(unix)'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "http2", "charset", "system-proxy", "gzip", "brotli", "deflate", "multipart", "cookies", "stream", "rustls"] }
