[package]
name = "srcwrsample"
authors = ["rtldg <rtldg@protonmail.com>"]
description = "Sample extension that is useful to use as an extension base"
license = "GPL-3.0-or-later"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
extshared_build_helper = { path = "../extshared_build_helper" }

[dependencies]
extshared = { path = "../extshared" }

[target.'cfg(windows)'.dependencies]
windows-targets = "0.52"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
	"Win32_System_SystemInformation", # RtlGetVersion
]
