[package]
name = "srcwrutil"
authors = ["rtldg <rtldg@protonmail.com>"]
description = "Util extension for SRCWR"
license = "GPL-3.0-or-later"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
extshared_build_helper.workspace = true

[dependencies]
extshared.workspace = true
hex = "0.4"
libc = "0.2"
sha1 = "0.10"
smol_str = "0.3"
